docker-scripts/plex/plex-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex
spec:
  rules:
  - host: plex.internal.arendse.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 32400
